
5.2a2 -> 5.2a3:
    - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
    - jbj: bzdio: finish abstraction between FD_t <-> rpmbz methods.
    - jbj: bzdio: stub-in an abstraction between FD_t <-> rpmbz methods.
    - jbj: bzdio: hmm, revert the pop/replace patch, there's more todo++ ...
    - jbj: bzdio: pop/replace ufdio with bzdio (including a fdno).
    - jbj: bzdio: take out the rubbish.
    - jbj: bzdio: stage the multi-block BZIP2 payload code for debugging.
    - jbj: bzdio: populate rpmbz with all but bz->fp, rearrange code to taste.
    - jbj: bzdio: use the rpmbz container to carry around BZFILE *bzfile.
    - jbj: bzdio: add annotation for bzip2, add (unused) rpmbz container.
    - jbj: rpmz: add a modified version of rpmpigz (before merging with rpmz).
    - jbj: rpmz: add Fchown/Fchmod, attempt to preserve owner/perms/timestamp.
    - jbj: rpmz: swipe xz AutoFu to detect timestamps.
    - jbj: rpmz: swipe xz AutoFu to detect physmem/ncpus.
    - jbj: yarn: add to rpmio.
    - jbj: rpmz: stub in argv[0] processing to set operation mode.
    - jbj: rpmz: stub in RPMZ envvar option processing.
    - jbj: fix: eliminate a argvSplit() memory leak.
    - jbj: rpmz: gather args from multiple manifests (ala rpmwget).
    - jbj: rpmz: stub in --files manifest handling (ignore --files0 for now).
    - jbj: rpmz: stub in signal handling.
    - jbj: rpmz: handle gzip/bzip2/xz/lzma compression in 1 executable.
    - proyvind: create %mipsel and also add more generations to the mips macros. 
    - jbj: fix: avoid the assertion failure w LZMA lzdio by upgrading to XZ.
    - proyvind: add initial support for detecting automatically detecting
	architecture through libcpuinfo.
    - jbj: stub-in /usr/lib/rpm/helpers/makeshlibs proof-of-concept.
    - proyvind: add %mips & %mipsx macros for mips archictecture.
    - jbj: add rpmdsNSType() to -lrpm loader map.